apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'application'

if (project.ext.properties.get('isDevBuild') == null) {
    project.ext.isDevBuild = !project.ext.properties.containsKey("buildConfig") || !"release".equals(project.ext.buildConfig)
}

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

project.ext.jenkinsBuildNumber = "$System.env.VERSION_NUMBER"
project.ext.jenkinsJobName = "hub-v2"

group = 'com.flightstats'

version = project.ext.jenkinsBuildNumber

project.ext.isDevBuild = !project.ext.properties.containsKey("buildConfig") || !"release".equals(project.ext.buildConfig)

println "Building version: ${version}"

buildDir = 'build'

mainClassName = "com.flightstats.hub.app.SingleHubMain"

configurations {
    all*.exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
    all*.exclude(module: 'log4j')
    integrationTests
}

dependencies {

    compile 'org.eclipse.jetty.aggregate:jetty-all:9.3.1.v20150714'
    compile 'com.sun.jersey:jersey-bundle:1.19'
    compile 'com.sun.jersey.contribs:jersey-guice:1.19'
    compile 'com.fasterxml.jackson.core:jackson-core:2.6.0'
    compile 'com.fasterxml.jackson.core:jackson-annotations:2.6.0'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.6.0'
    compile 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.6.0'
    compile 'javax.servlet:javax.servlet-api:3.1.0'
    compile 'javax.ws.rs:jsr311-api:1.1.1'
    compile 'com.google.inject:guice:4.0'
    compile 'com.google.inject.extensions:guice-servlet:4.0'
    compile 'com.google.guava:guava:18.0'
    compile 'joda-time:joda-time:2.8.1'

    compile 'ch.qos.logback:logback-core:1.1.3'
    compile 'ch.qos.logback:logback-classic:1.1.3'
    compile 'org.slf4j:jul-to-slf4j:1.7.12'
    compile 'org.slf4j:log4j-over-slf4j:1.7.12'
    compile 'org.slf4j:jcl-over-slf4j:1.7.12'
    compile 'net.logstash.logback:logstash-logback-encoder:4.4'

    compile 'com.amazonaws:aws-java-sdk:1.10.7'
    compile 'org.apache.curator:curator-recipes:2.8.0'
    testCompile 'org.apache.curator:curator-test:2.8.0'

    compile 'org.apache.commons:commons-lang3:3.4'
    compile 'commons-io:commons-io:2.4'
    compile 'com.github.rholder:guava-retrying:2.0.0'
    compile 'com.google.code.gson:gson:2.3.1'
    compile 'com.newrelic.agent.java:newrelic-agent:3.19.0'
    compile 'com.newrelic.agent.java:newrelic-api:3.19.0'
    compile 'org.projectlombok:lombok:1.16.4'

    testCompile 'com.sparkjava:spark-core:2.2'
    testCompile 'junit:junit:4.+'
    testCompile "org.mockito:mockito-all:1.+"
}


distTar {
    compression = Compression.GZIP
}

applicationDistribution.from('README.md') {
    into "doc"
}

applicationDistribution.from('config/triforce') {
    into "triforce"
}

